# httpr

./: .env.example  .gitignore  Cargo.toml  build.rs  readme.md
assets/: style.css
examples/: dummy.rs  static_file_server.rs
scripts/: dos.sh
src/: handlers.rs  http.rs  lib.rs  main.rs  static_server.rs
src/static_server/: handlebars.rs  utils.rs
templates/: directory.hbs  not_found.hbs
