[package]
name = "httpr"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
chrono = "0.4.39"
clap = { version = "4.5.39", features = ["derive"] }
env_logger = "0.11.6"
handlebars = "6.3.2"
log = "0.4.25"
mime_guess = "2.0.5"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
strum = "0.27.1"
strum_macros = "0.27.1"
tokio = { version = "1.45.0", features = ["full"] }
url = "2.5.4"
